2005-12-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : Move processing of -x (exclude hosts by name)
	  until after mod_postop() has been called, because mod_postop()
	  may modify the list of target hosts.

2005-10-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/xrcmd.c : Fix typo in error message "k4cmd" -> "rcmd".
	  Patch supplied by Joe Ramey <ramey@ti.com>.
	  
2005-10-13  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.8.

2005-10-10  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/mod_rcmd.h, src/pdsh/mod_rcmd.c : Replace mod_rcmd() 
	  function with mod_rcmd_create() which returns a created struct 
	  rcmd_info with created stdout/err file descriptors and module-specific
	  opaque data. The created rcmd_info is freed with mod_rcmd_destroy()
	  before each dsh thread exits.

	* src/pdsh/mod.h, src/pdsh/mod.c  : Allow modules to optionally
	  export an rcmd_destroy function for cleanup of rcmd_info structure
	  and associated opaque data. Change rcmd_signal interface to pass
	  struct rcmd_info instead of efd, and rcmd interface passes 
	  pointer to void * argument (module-specific opaque data).

	* src/pdsh/dsh.h, src/pdsh/dsh.c : Replace thd_t fd and efd members
	  with pointer to struct rcmd_info created by call the 
	  mod_rcmd_create(). Call mod_rcmd_destroy() before thread termination.

	* src/modules/sshcmd.c : Remove ssh_reaper thread and collect ssh
	  process exit status in new "rcmd_destroy" function.

	* src/modules/mqcmd.c, src/modules/k4cmd.c, src/modules/xrcmd.c,
	  src/modules/mcmd.c, src/modules/qcmd.c :
	  Update remaining rcmd modules to reflect changes in 
	  pdsh_rcmd_operations components.

	* src/modules/sdr.c (_sdr_cache_hresp_line) : Ignore host_responds
	  for node ids with no node information.

2005-09-30  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/qsnet/qswutil.h : fix compile warning against definition
	  of QSW_RAILMASK_MAX.

2005-09-22  Mark Grondona <mgrondona@llnl.gov>
